test/classes/vass/propagateConstnessOfVariableToFields.good
propagateConstnessOfVariableToFields.chpl:18: error: assigning to 'const'
